--- a/style.css
+++ b/style.css
@@ -99,8 +99,21 @@ body {
 font-family: "RiformaLLTrialWeb-Regular";
 }
 
+#site_wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100svh;
+  overflow: auto;
+}
 #main_body {
   height: 200svh;
+}
+@media screen and (max-width: 1000px) {
+  #main_body {
+    height: 150svh;
+  }
 }
 
 #main_body .logo {
