--- a/style.css
+++ b/style.css
@@ -114,12 +114,14 @@ font-family: "RiformaLLTrialWeb-Regular";
 
 /* Hide scrollbar for IE, Edge and Firefox */
 #site_wrap {
-  -ms-overflow-style: none;  /* IE and Edge */
+  ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
 #main_body {
-  height: 200svh;
+  height: 300svh;
   contain: paint;
+  position: relative;
+  z-index: 50;
 }
 @media screen and (max-width: 1000px) {
   #main_body {
@@ -133,6 +135,7 @@ font-family: "RiformaLLTrialWeb-Regular";
   position: sticky;
   top: 0;
   z-index: 10;
+  color: black;
 }
 
 #main_body .logo svg {
@@ -142,6 +145,7 @@ font-family: "RiformaLLTrialWeb-Regular";
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+  fill: currentColor;
 }
 
 @media screen and (max-width: 1000px) {
@@ -214,15 +218,14 @@ font-family: "RiformaLLTrialWeb-Regular";
 
 #text_section {
   background-color: #838569;
-  padding: 50px 0px 100px;
+  padding: 70px 0px 100px;
   position: relative;
-  z-index: 21;
-  margin-top: -30px;
+  z-index: 51;
 }
 
 @media screen and (max-width: 1000px) {
   #text_section {
-    padding: 30px 0px 150px;
+    padding: 60px 0px 150px;
   }
 }
 
@@ -277,16 +280,12 @@ font-family: "RiformaLLTrialWeb-Regular";
   }
 }
 
-#bottom_bar_wrap {
-  height: 100svh;
-  background: rgba(yellow,.3);
-}
+
 
 #bottom_bar {
-  position: sticky;
+  position: fixed;
   display: block;
-  top: calc(100svh - 0px);
-  transform: translate(0px,-30px);
+  bottom: 0;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -294,13 +293,24 @@ font-family: "RiformaLLTrialWeb-Regular";
   cursor: pointer;
 }
 
-#bottom_bar div:first-child {
+#bottom_bar_clone {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+}
+
+#bottom_bar div:first-child, #bottom_bar_clone div:first-child {
   background: #838569;
   height: 30px;
   cursor: pointer;
 }
 
-#bottom_bar div:last-child {
+#bottom_bar div:last-child, #bottom_bar_clone div:last-child {
   background: #D06552;
   height: 30px;
   cursor: pointer;
@@ -308,4 +318,63 @@ font-family: "RiformaLLTrialWeb-Regular";
 
 a {
   color: inherit;
+}
+
+/* New Animations */
+#container {
+width: 100%;
+height: 100vh;
+height: 100dvh;
+overflow: hidden;
+position: fixed;
+top: 0;
+left: 0;
+pointer-events: none;
+}
+.homepage_gallery {
+  overflow: hidden;
+  position: relative;
+  background: $black;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  left: 0;
+  color: $white;
+}
+figure {
+  margin: 0px;
+  line-height: 0px;
+  animation: fade-in 1s ease;
+  filter: blur(2px);
+}
+.si {
+  width: 100%; 
+  height: 150vh; 
+}
+
+#pattern_red_new {
+  position: fixed;
+  top: 0;
+  left: -10vw;
+  width: 120vw;
+  height: 100%;
+  background-image: url('pattern-red2.png');
+  background-size: cover;
+  mix-blend-mode: multiply;
+  animation: text-wave 40s ease-in-out infinite;
+  pointer-events: none;
+  filter: blur(2px);
+}
+
+@keyframes text-wave {
+  0% {
+    transform: translate(0px,0px);
+  }
+  50% {
+    transform: translate(8%,0px)
+  }
+  100% {
+    transform: translate(0px,0px);
+  }
 }
