--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  overscroll-behavior: none;
 }
 /*
   5. Improve media defaults
